[package]
name = "caucus"
version = "0.0.1"
publish = false
license = "Apache"

[dependencies]
bcrypt = "0.6"
chrono = { version = "0.4.10", features = ["serde"]}
diesel = { version = "1.4.3", features = ["postgres", "r2d2", "chrono"] }
jsonwebtoken = "1"
log = "0.4.8"
reqwest = "0.9.22"
rocket = "0.4.2"
rustc-serialize = "0.3"
serde = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.2"
features = ["diesel_postgres_pool"]
